<resources>
    <string name="app_name">Simple_Calculator</string>
    <string name="enter_first_no">Enter First No:</string>
    <string name="enter_second_no">Enter Second No:</string>
    <string name="name">Name</string>
    <string name="enter_first_number">Enter First Number:</string>
    <string name="enter_second_number">Enter Second Number:</string>
    <string name="clear">CLEAR</string>
    <string name="sub">-</string>
    <string name="mul">×</string>
    <string name="div">÷</string>
    <string name="result">Result:</string>
    <string name="add">+</string>
</resources>